# simple-metronome

./: README.md  pyproject.toml
src/simple_metronome/: __init__.py  app.py  config.toml  config_template.toml  configuration.py  default_config.py  main.py  main_window - Copy.ui  main_window.py  main_window.ui  resource_files.qrc  resource_files_rc.py  settings_dialog.py  settings_dialog.ui  style.qss  ui_main_window.py  ui_settings_dialog.py  version.py
